# is213-g5tx

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/atoms/alert/: pyproject.toml
apps/atoms/appointment/: pyproject.toml
apps/atoms/assignment/: pyproject.toml
apps/atoms/case/: eslint.config.js  package.json  tsconfig.json
apps/atoms/metrics/: pyproject.toml
apps/atoms/proof/: pyproject.toml
apps/atoms/resident/: pyproject.toml
apps/composites/accept-job/: pyproject.toml
apps/composites/assign-job/: pyproject.toml
apps/composites/close-case/: pyproject.toml
apps/composites/handle-breach/: pyproject.toml
apps/composites/open-case/: package.json  tsconfig.json
apps/composites/reschedule-job/: pyproject.toml
apps/frontend/: package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx
docs/: architecture.md  event-flow.md  service-map.md
tooling/eslint/: eslint.config.js
tooling/lint-staged/: lint-staged.config.js
