[project]
name = "townops-alert"
version = "0.1.0"
description = "alert Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "supabase",
    "townops-shared",
]

[tool.uv]
managed = true

[tool.uv.sources]
townops-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
